--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,3 +1,8 @@
+
+.header{
+    background-color: rgb(255, 248, 243);;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
 }
@@ -11,6 +16,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
 }
 
 .nav-title {
@@ -42,4 +48,14 @@ nav li {
     font-size: 20px;
 font-weight: 700;
 padding: 18px 35px;
+}
+
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex; 
+    align-items: center;
+}
+
+.banner .profile-pic{
+    width: 500px;
 }
