--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,6 +1,9 @@
 
 .header{
     background-color: rgb(255, 248, 243);;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 body {
@@ -51,11 +54,59 @@ padding: 18px 35px;
 }
 
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex; 
     align-items: center;
+    justify-content: space-between;
 }
 
 .banner .profile-pic{
     width: 500px;
+}
+
+.banner-wel{
+    font-size: 45px;
+font-weight: 600;
+color: rgb(71, 71, 71);
+margin bottom: 0px;
+
+}
+.banner-title{
+    font-size: 85px;
+font-weight: 700;
+margin top: 2px;
+margin-bottom: 0;
+}
+.banner-dis{
+    width: 585px;
+height: 60px;
+    margin-top: 5px;
+}
+
+.banner-contant{
+    width: 500px;
+}
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+background: rgb(255, 248, 243);
+margin: 130px 230px;
+}
+
+.section-title{
+    color: rgb(24, 24, 24);
+font-size: 35px;
+font-weight: 700;
+line-height: 48px;
+text-align: center;
+}
+
+.section-des{
+    color: rgb(117, 117, 117);
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+letter-spacing: 0%;
+text-align: center;
 }
