skill section css

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -127,3 +127,15 @@ main{
 #what-i-do-des{
     padding: 30px 150px;
 }
+
+.skills-container{
+    display: flex;
+}
+
+.skill{
+    padding: 30px;
+    gap: 24px;
+}
+
+.skill-des{
+}
