--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -115,6 +115,11 @@ main{
     max-width: 1140px;
     margin: 0px auto;
 }
+
+main section{
+
+    margin top: 130px;
+}
 .about-info-container{
     display: flex;
     justify-content: space-around;
@@ -130,12 +135,23 @@ main{
 
 .skills-container{
     display: flex;
+    gap: 24px;
 }
 
 .skill{
     padding: 30px;
-    gap: 24px;
+    border-radius: 5px;
+
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+background: rgb(255, 255, 255);
 }
 
 .skill-des{
+    color: rgb(117, 117, 117);
+}
+
+.resume-colum-title{
+    color: rgb(71, 71, 71);
+    font-size: 30px;
+    font-weight: 700;
 }
