--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -186,3 +186,12 @@ margin-bottom: 10px;
     text-align: center;
     margin: 50px;
 }
+
+/* footer */
+
+footer{
+    display: flex;
+    background: rgb(255, 248, 243);
+    padding: 130px 200px;
+    margin top: 100px;
+}
